--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-sterterkit",
+  "name": "pdf-search",
   "author": {
     "name": "Muhammed DENİZ",
     "email": "muhammeddenizcs@gmail.com",
